Streaming Replication 추가 및 Tablespace Remapping 기능 수정

--- a/backup/hypersql.config
+++ b/backup/hypersql.config
@@ -9,9 +9,25 @@
 ###############
 
 # Connection Info
-CON_SOCKET_DIR=/var/run/hypersql
+# Set OpenSQL Cluster Connection Info
+# CON_TYPE
+# P : Backup from Primary Server IP(Streaming Replication)
+# S : Backup from Standby Server IP(Streaming Replication)
+# L : Backup from Single server(VIP or RIP) OR Local Server (Using Unix Domain Socket)
+# 
+# You have to connect to port of PostgreSQL not any other middleware
+#
+# CON_HOST
+# Write IP OR Hostname OR Unix Domain Socket
+# If CON_TYPE P OR S, Write two host of primary and standby)
+# Ex) CON_HOST=(192.168.184.1 192.168.184.2)
+CON_TYPE=L
+#CON_HOST=(192.168.184.130 192.168.184.131)
+CON_HOST=(127.0.0.1)
 CON_USER=postgres
 CON_PORT=5432
+CON_RETRY_COUNT=3
+CON_RETRY_TIME=5
 
 # Backup Directories
 BAK_DIR=/hypersql/bakdir
@@ -28,9 +44,7 @@ BAK_LOG_DIR=/hypersql/pg/14/log/backup
 
 # Backup Period
 # 0 : just one time 1 : everyday   2 : every sunday   3 : every first date of the month
-BAK_PERIOD=1
-
-
+BAK_PERIOD=0
 
 # BAK_COMPRESS_ENABLE
 # Y : Backup with compression
@@ -40,7 +54,7 @@ BAK_PERIOD=1
 #
 # COMPRESS_LEVEL = 0 ~ 9
 # DEFAULT LEVEL = 6
-BAK_COMPRESS_ENABLE=Y
+BAK_COMPRESS_ENABLE=N
 BAK_COMPRESS_LEVEL=6
 
 # BAK_CHECKPOINT_FAST
@@ -57,3 +71,8 @@ BAK_ASYNC=N
 # Y : After success of backup, old archive will be removed.
 # N : Maintain old archives.
 #REMOVE_ARCHIVE=N
+
+# Max rate
+# maximum transfer rate to transfer data directory
+# (in kB/s, or use suffix "k" or "M")
+#MAX_RATE=32k
