백업 진행 상황 확인 기능 로그 및 출력에 추가

--- a/backup/opensql.config
+++ b/backup/opensql.config
@@ -23,14 +23,14 @@
 # Ex) CON_HOST=(192.168.184.1 192.168.184.2)
 CON_TYPE=L
 #CON_HOST=(192.168.184.130 192.168.184.131)
-CON_HOST=(127.0.0.1)
+CON_HOST=(/var/run/opensql)
 CON_USER=postgres
 CON_PORT=5432
 CON_RETRY_COUNT=3
 CON_RETRY_TIME=5
 
 # Backup Directories
-BAK_DIR=/hypersql/bakdir
+BAK_DIR=/opensql/bakdir
 
 # Log Directory & Enable
 #
@@ -40,20 +40,32 @@ BAK_DIR=/hypersql/bakdir
 # Y   -  Log trace (very verbose debugging), debug, info, warnings and errors
 #
 BAK_LOG_ENABLE=Y
-BAK_LOG_DIR=/hypersql/pg/14/log/backup
+BAK_LOG_DIR=/opensql/pg/14/log/backup
+
+# BAK_CHECK_PROGRESS
+# BAK_CHECK_PROGRESS_ENABLE=Y : CHECK PROGRESS OF BACKUP
+# BAK_CHECK_PROGRESS_ENABLE=N : DON'T CHECK PROGRESS OF BACKUP
+#
+# BAK_CHECK_PROGRESS_TIME
+# CHECK CYCLE OF PROGRESS
+# It's unit is seconds
+# RANGE : 1 ~ 99
+#
+BAK_CHECK_PROGRESS_ENABLE=Y
+BAK_CHECK_PROGRESS_TIME=1
 
 # Backup Period
 # 0 : just one time 1 : everyday   2 : every sunday   3 : every first date of the month
-BAK_PERIOD=2
+BAK_PERIOD=0
 
 # BAK_COMPRESS_ENABLE
 # Y : Backup with compression
 # N : Backup without compression
 # 
-# COMPRESS_TYPE = gz
+# COMPRESS_TYPE=gz
 #
-# COMPRESS_LEVEL = 0 ~ 9
-# DEFAULT LEVEL = 6
+# COMPRESS_LEVEL=0 ~ 9
+# DEFAULT LEVEL=6
 BAK_COMPRESS_ENABLE=N
 BAK_COMPRESS_LEVEL=6
 
