opensql.config 업데이트
이전 커밋 내용에 반영된 파라미터를 추가하였음.

커밋 3dccfd2 참조

--- a/backup/opensql.config
+++ b/backup/opensql.config
@@ -21,16 +21,18 @@
 # Write IP OR Hostname OR Unix Domain Socket
 # If CON_TYPE P OR S, Write two host of primary and standby)
 # Ex) CON_HOST=(192.168.184.1 192.168.184.2)
-CON_TYPE=L
-#CON_HOST=(192.168.184.130 192.168.184.131)
-CON_HOST=(/var/run/opensql)
+CON_TYPE=P
+CON_HOST=(192.168.200.51 192.168.200.52)
+#CON_HOST=(/var/run/opensql)
 CON_USER=postgres
-CON_PORT=5432
+CON_PORT=6501
+CON_DATABASE=postgres
 CON_RETRY_COUNT=3
 CON_RETRY_TIME=5
+CON_RETRY_ROLE=Y
 
 # Backup Directories
-BAK_DIR=/opensql/bakdir
+BAK_DIR=/var/lib/pgsql/bak
 
 # Log Directory & Enable
 #
@@ -40,7 +42,7 @@ BAK_DIR=/opensql/bakdir
 # Y   -  Log trace (very verbose debugging), debug, info, warnings and errors
 #
 BAK_LOG_ENABLE=Y
-BAK_LOG_DIR=/opensql/pg/14/log/backup
+BAK_LOG_DIR=/pg_log/bak
 
 # BAK_CHECK_PROGRESS
 # BAK_CHECK_PROGRESS_ENABLE=Y : CHECK PROGRESS OF BACKUP
@@ -48,15 +50,27 @@ BAK_LOG_DIR=/opensql/pg/14/log/backup
 #
 # BAK_CHECK_PROGRESS_TIME
 # CHECK CYCLE OF PROGRESS
-# It's unit is seconds
-# RANGE : 1 ~ 99
+# Unit is seconds
+# RANGE : 1 ~ 99 (sec)
 #
 BAK_CHECK_PROGRESS_ENABLE=Y
 BAK_CHECK_PROGRESS_TIME=1
 
 # Backup Period
-# 0 : just one time 1 : everyday   2 : every sunday   3 : every first date of the month
-BAK_PERIOD=0
+# 0 : just one time 1 : everyday   2 : every sunday   3 : every first date of the month   4: custom
+# BAK_DAY_OF_MONTH = Day for backup every month
+# BAK_DAY_OF_WEEK = Day for backup every month
+# MONDAY : 1  ~  SUNDAY : 7
+# ALL TIME : *
+# If you want set many time use '()'
+# Ex) BAK_DAY_OF_WEEK=(1,3,5)  = MONDAY, WEDNESDAY, FRIDAY
+
+# TIME FORMAT IS HH24
+BAK_PERIOD=4
+BAK_DAY_OF_MONTH=*
+BAK_DAY_OF_WEEK=*
+BAK_TIME_HOUR=17
+BAK_TIME_MINUTE=15
 
 # BAK_COMPRESS_ENABLE
 # Y : Backup with compression
@@ -82,7 +96,8 @@ BAK_ASYNC=N
 # Archive Policy
 # Y : After success of backup, old archive will be removed.
 # N : Maintain old archives.
-#REMOVE_ARCHIVE=N
+BAK_REMOVE_ARCHIVE=Y
+BAK_ARCHIVE_DIR=/pg_arch
 
 # Max rate
 # maximum transfer rate to transfer data directory
