--- a/backup/opensql.config
+++ b/backup/opensql.config
@@ -21,18 +21,22 @@
 # Write IP OR Hostname OR Unix Domain Socket
 # If CON_TYPE P OR S, Write two host of primary and standby)
 # Ex) CON_HOST=(192.168.184.1 192.168.184.2)
-CON_TYPE=P
-CON_HOST=(192.168.200.51 192.168.200.52)
+# CON_PGVERSION = PostgreSQL client's major version in this server. 
+# Not dbms server's version.
+
+CON_PGVERSION=15
+CON_TYPE=S
+CON_HOST=(192.168.200.151 192.168.200.152 192.168.200.153)
 #CON_HOST=(/var/run/opensql)
 CON_USER=postgres
-CON_PORT=6501
+CON_PORT=5432
 CON_DATABASE=postgres
 CON_RETRY_COUNT=3
 CON_RETRY_TIME=5
 CON_RETRY_ROLE=Y
 
 # Backup Directories
-BAK_DIR=/var/lib/pgsql/bak
+BAK_DIR=/root/bak
 
 # Log Directory & Enable
 #
@@ -42,7 +46,7 @@ BAK_DIR=/var/lib/pgsql/bak
 # Y   -  Log trace (very verbose debugging), debug, info, warnings and errors
 #
 BAK_LOG_ENABLE=Y
-BAK_LOG_DIR=/pg_log/bak
+BAK_LOG_DIR=/root/bak/log
 
 # BAK_CHECK_PROGRESS
 # BAK_CHECK_PROGRESS_ENABLE=Y : CHECK PROGRESS OF BACKUP
@@ -66,7 +70,7 @@ BAK_CHECK_PROGRESS_TIME=1
 # Ex) BAK_DAY_OF_WEEK=(1,3,5)  = MONDAY, WEDNESDAY, FRIDAY
 
 # TIME FORMAT IS HH24
-BAK_PERIOD=4
+BAK_PERIOD=0
 BAK_DAY_OF_MONTH=*
 BAK_DAY_OF_WEEK=*
 BAK_TIME_HOUR=17
@@ -96,8 +100,8 @@ BAK_ASYNC=N
 # Archive Policy
 # Y : After success of backup, old archive will be removed.
 # N : Maintain old archives.
-BAK_REMOVE_ARCHIVE=Y
-BAK_ARCHIVE_DIR=/pg_arch
+BAK_REMOVE_ARCHIVE=N
+BAK_ARCHIVE_DIR=/var/lib/pgsql/15/archive
 
 # Max rate
 # maximum transfer rate to transfer data directory
