--- a/backup/opensql.config
+++ b/backup/opensql.config
@@ -25,18 +25,19 @@
 # Not dbms server's version.
 
 CON_PGVERSION=15
-CON_TYPE=S
-CON_HOST=(192.168.200.151 192.168.200.152 192.168.200.153)
+CON_TYPE=L
+CON_HOST=(192.168.200.71)
 #CON_HOST=(/var/run/opensql)
 CON_USER=postgres
 CON_PORT=5432
 CON_DATABASE=postgres
 CON_RETRY_COUNT=3
 CON_RETRY_TIME=5
-CON_RETRY_ROLE=Y
+CON_RETRY_ROLE=N
 
 # Backup Directories
-BAK_DIR=/root/bak
+BAK_DIR=/home/opensql/bak
+BAK_TYPE=L #Logical
 
 # Log Directory & Enable
 #
@@ -46,7 +47,7 @@ BAK_DIR=/root/bak
 # Y   -  Log trace (very verbose debugging), debug, info, warnings and errors
 #
 BAK_LOG_ENABLE=Y
-BAK_LOG_DIR=/root/bak/log
+BAK_LOG_DIR=/home/opensql/log
 
 # BAK_CHECK_PROGRESS
 # BAK_CHECK_PROGRESS_ENABLE=Y : CHECK PROGRESS OF BACKUP
@@ -73,8 +74,8 @@ BAK_CHECK_PROGRESS_TIME=1
 BAK_PERIOD=0
 BAK_DAY_OF_MONTH=*
 BAK_DAY_OF_WEEK=*
-BAK_TIME_HOUR=17
-BAK_TIME_MINUTE=15
+BAK_TIME_HOUR=16
+BAK_TIME_MINUTE=53
 
 # BAK_COMPRESS_ENABLE
 # Y : Backup with compression
@@ -84,7 +85,7 @@ BAK_TIME_MINUTE=15
 #
 # COMPRESS_LEVEL=0 ~ 9
 # DEFAULT LEVEL=6
-BAK_COMPRESS_ENABLE=N
+BAK_COMPRESS_ENABLE=
 BAK_COMPRESS_LEVEL=6
 
 # BAK_CHECKPOINT_FAST
