--- a/backup/opensql.config
+++ b/backup/opensql.config
@@ -27,7 +27,6 @@
 CON_PGVERSION=15
 CON_TYPE=L
 CON_HOST=(192.168.200.71)
-#CON_HOST=(/var/run/opensql)
 CON_USER=postgres
 CON_PORT=5432
 CON_DATABASE=postgres
@@ -37,7 +36,11 @@ CON_RETRY_ROLE=N
 
 # Backup Directories
 BAK_DIR=/home/opensql/bak
-BAK_TYPE=L #Logical
+
+# BAK_TYPE
+# Logical : LOGICAL 
+# Physical : PHYSICAL
+BAK_TYPE=LOGICAL
 
 # Log Directory & Enable
 #
@@ -74,7 +77,7 @@ BAK_CHECK_PROGRESS_TIME=1
 BAK_PERIOD=0
 BAK_DAY_OF_MONTH=*
 BAK_DAY_OF_WEEK=*
-BAK_TIME_HOUR=16
+BAK_TIME_HOUR=15
 BAK_TIME_MINUTE=53
 
 # BAK_COMPRESS_ENABLE
@@ -108,3 +111,4 @@ BAK_ARCHIVE_DIR=/var/lib/pgsql/15/archive
 # maximum transfer rate to transfer data directory
 # (in kB/s, or use suffix "k" or "M")
 #MAX_RATE=32k
+
