--- a/backup/opensql.config
+++ b/backup/opensql.config
@@ -8,6 +8,10 @@
 ## BAK_DIR=/hypersql/bak
 ###############
 
+
+###############
+# COMMON OPTION
+###############
 # Connection Info
 # Set OpenSQL Cluster Connection Info
 # CON_TYPE
@@ -24,9 +28,9 @@
 # CON_PGVERSION = PostgreSQL client's major version in this server. 
 # Not dbms server's version.
 
-CON_PGVERSION=15
+CON_PGVERSION=14
 CON_TYPE=L
-CON_HOST=(192.168.200.71)
+CON_HOST=(192.168.10.10)
 CON_USER=postgres
 CON_PORT=5432
 CON_DATABASE=postgres
@@ -35,7 +39,7 @@ CON_RETRY_TIME=5
 CON_RETRY_ROLE=N
 
 # Backup Directories
-BAK_DIR=/home/opensql/bak
+BAK_DIR=/var/lib/pgsql/bak
 
 # BAK_TYPE
 # Logical : LOGICAL 
@@ -50,7 +54,7 @@ BAK_TYPE=LOGICAL
 # Y   -  Log trace (very verbose debugging), debug, info, warnings and errors
 #
 BAK_LOG_ENABLE=Y
-BAK_LOG_DIR=/home/opensql/log
+BAK_LOG_DIR=/var/lib/pgsql/bak/bak_log
 
 # BAK_CHECK_PROGRESS
 # BAK_CHECK_PROGRESS_ENABLE=Y : CHECK PROGRESS OF BACKUP
@@ -80,14 +84,19 @@ BAK_DAY_OF_WEEK=*
 BAK_TIME_HOUR=15
 BAK_TIME_MINUTE=53
 
+#################
+# PHYSICAL OPTION
+#################
 # BAK_COMPRESS_ENABLE
 # Y : Backup with compression
 # N : Backup without compression
 # 
-# COMPRESS_TYPE=gz
+# COMPRESS_TYPE=gz 
 #
 # COMPRESS_LEVEL=0 ~ 9
 # DEFAULT LEVEL=6
+#
+#
 BAK_COMPRESS_ENABLE=
 BAK_COMPRESS_LEVEL=6
 
@@ -112,3 +121,25 @@ BAK_ARCHIVE_DIR=/var/lib/pgsql/15/archive
 # (in kB/s, or use suffix "k" or "M")
 #MAX_RATE=32k
 
+################
+# LOGICAL OPTION
+################
+
+# LOGICAL_BAK_COMPRESS_ENABLE
+# Y : Logical Backup with compression
+# N : Logical Backup without compression
+#
+# LOGICAL_BAK_COMPRESS_TYPE=c, d, t, p(default)
+#
+# LOGICAL_BAK_COMPRESS_LEVEL=0 ~ 9
+# DEFAULT LEVEL = 6
+#
+# IF YOU USING LOGICAL_BAK_COMPRESS_TYPE=t, LOGICAL_BAK_COMPRESS_LEVEL MUST BE 0
+#
+LOGICAL_BAK_COMPRESS_ENABLE=
+LOGICAL_BAK_COMPRESS_TYPE=p
+LOGICAL_BAK_COMPRESS_LEVEL=0
+
+# LOGICAL_LOCK_WAIT_TIMEOUT (Milliseconds)
+LOGICAL_LOCK_WAIT_TIMEOUT_ENABLE=y
+LOGICAL_LOCK_WAIT_TIMEOUT=10000
