--- a/backup/opensql.config
+++ b/backup/opensql.config
@@ -25,26 +25,26 @@
 # Write IP OR Hostname OR Unix Domain Socket
 # If CON_TYPE P OR S, Write two host of primary and standby)
 # Ex) CON_HOST=(192.168.184.1 192.168.184.2)
-# CON_PGVERSION = PostgreSQL client's major version in this server. 
-# Not dbms server's version.
+# CON_PGVERSION = PostgreSQL major version in this server. 
+# It must be same on both side client and server
 
-CON_PGVERSION=14
-CON_TYPE=L
-CON_HOST=(192.168.10.10)
+CON_PGVERSION=15
+CON_TYPE=P
+CON_HOST=(192.168.200.191 192.168.200.192)
 CON_USER=postgres
 CON_PORT=5432
 CON_DATABASE=postgres
 CON_RETRY_COUNT=3
 CON_RETRY_TIME=5
-CON_RETRY_ROLE=N
+CON_RETRY_ROLE=Y
 
 # Backup Directories
-BAK_DIR=/var/lib/pgsql/bak
+BAK_DIR=/home/opensql/bak
 
 # BAK_TYPE
 # Logical : LOGICAL 
 # Physical : PHYSICAL
-BAK_TYPE=LOGICAL
+BAK_TYPE=PHYSICAL
 
 # Log Directory & Enable
 #
@@ -54,19 +54,7 @@ BAK_TYPE=LOGICAL
 # Y   -  Log trace (very verbose debugging), debug, info, warnings and errors
 #
 BAK_LOG_ENABLE=Y
-BAK_LOG_DIR=/var/lib/pgsql/bak/bak_log
-
-# BAK_CHECK_PROGRESS
-# BAK_CHECK_PROGRESS_ENABLE=Y : CHECK PROGRESS OF BACKUP
-# BAK_CHECK_PROGRESS_ENABLE=N : DON'T CHECK PROGRESS OF BACKUP
-#
-# BAK_CHECK_PROGRESS_TIME
-# CHECK CYCLE OF PROGRESS
-# Unit is seconds
-# RANGE : 1 ~ 99 (sec)
-#
-BAK_CHECK_PROGRESS_ENABLE=Y
-BAK_CHECK_PROGRESS_TIME=1
+BAK_LOG_DIR=/home/opensql/log
 
 # Backup Period
 # 0 : just one time 1 : everyday   2 : every sunday   3 : every first date of the month   4: custom
@@ -78,7 +66,7 @@ BAK_CHECK_PROGRESS_TIME=1
 # Ex) BAK_DAY_OF_WEEK=(1,3,5)  = MONDAY, WEDNESDAY, FRIDAY
 
 # TIME FORMAT IS HH24
-BAK_PERIOD=0
+BAK_PERIOD=4
 BAK_DAY_OF_MONTH=*
 BAK_DAY_OF_WEEK=*
 BAK_TIME_HOUR=15
@@ -87,39 +75,58 @@ BAK_TIME_MINUTE=53
 #################
 # PHYSICAL OPTION
 #################
+
+# P_BAK_CHECK_PROGRESS_ENABLE
+# Y : CHECK PROGRESS OF BACKUP AND LOGGING TO FILE
+# N : DON'T CHECK PROGRESS OF BACKUP
+#
+# P_BAK_CHECK_PROGRESS_TIME
+# CHECK CYCLE OF PROGRESS
+# Unit is seconds
+# RANGE : 1 ~ 99 (sec)
+P_BAK_CHECK_PROGRESS_ENABLE=Y
+P_BAK_CHECK_PROGRESS_TIME=1
+
 # BAK_COMPRESS_ENABLE
 # Y : Backup with compression
 # N : Backup without compression
 # 
-# COMPRESS_TYPE=gz 
+# P_COMPRESS_TYPE=gz 
 #
-# COMPRESS_LEVEL=0 ~ 9
+# P_COMPRESS_LEVEL=0 ~ 9
 # DEFAULT LEVEL=6
-#
-#
-BAK_COMPRESS_ENABLE=
-BAK_COMPRESS_LEVEL=6
+P_BAK_COMPRESS_ENABLE=
+P_BAK_COMPRESS_LEVEL=6
 
-# BAK_CHECKPOINT_FAST
+# P_BAK_CHECKPOINT_FAST
 # Y : Checkpoint immediately
 # N : Wait for checkpoint duration
-BAK_CHECKPOINT_FAST=Y
+P_BAK_CHECKPOINT_FAST=Y
 
-# BAK_ASYNC
+# P_BAK_ASYNC
 # Y : Backup Asynchronized / This is faster than Sync but it can cause data loss
 # N : Backup Synchronized
-BAK_ASYNC=N
+P_BAK_ASYNC=N
+
+# Backup Policy
+# If Backup is completed then, Remove old backups
+# P_BAK_RETENTION_MINIMUM_COUNT 
+# Leaving backups only this count
+P_BAK_RETENTION_MINIMUM_COUNT=3
 
 # Archive Policy
+# If you want to delete backup files, you have to make ssh-key on both side
 # Y : After success of backup, old archive will be removed.
 # N : Maintain old archives.
-BAK_REMOVE_ARCHIVE=N
-BAK_ARCHIVE_DIR=/var/lib/pgsql/15/archive
+P_BAK_REMOVE_ARCHIVE=Y
+P_BAK_ARCHIVE_DIR=/home/opensql/pg/15/archive
+P_BAK_ARCHIVE_SSH_USER=opensql
 
 # Max rate
 # maximum transfer rate to transfer data directory
 # (in kB/s, or use suffix "k" or "M")
-#MAX_RATE=32k
+# 0 is unlimited
+P_MAX_RATE=0
 
 ################
 # LOGICAL OPTION
@@ -129,17 +136,23 @@ BAK_ARCHIVE_DIR=/var/lib/pgsql/15/archive
 # Y : Logical Backup with compression
 # N : Logical Backup without compression
 #
-# LOGICAL_BAK_COMPRESS_TYPE=c, d, t, p(default)
+# L_BAK_COMPRESS_TYPE=c, d, t, p(default)
 #
-# LOGICAL_BAK_COMPRESS_LEVEL=0 ~ 9
+# L_BAK_COMPRESS_LEVEL=0 ~ 9
 # DEFAULT LEVEL = 6
 #
-# IF YOU USING LOGICAL_BAK_COMPRESS_TYPE=t, LOGICAL_BAK_COMPRESS_LEVEL MUST BE 0
+# IF YOU USING L_BAK_COMPRESS_TYPE=t, L_BAK_COMPRESS_LEVEL MUST BE 0
 #
-LOGICAL_BAK_COMPRESS_ENABLE=
-LOGICAL_BAK_COMPRESS_TYPE=p
-LOGICAL_BAK_COMPRESS_LEVEL=0
+
+# LOGICAL_BAK_ALL
+# Y = pg_dumpall
+# N = pg_dump
+L_BAK_ALL=N
+
+L_BAK_COMPRESS_ENABLE=
+L_BAK_COMPRESS_TYPE=p
+L_BAK_COMPRESS_LEVEL=0
 
 # LOGICAL_LOCK_WAIT_TIMEOUT (Milliseconds)
-LOGICAL_LOCK_WAIT_TIMEOUT_ENABLE=y
-LOGICAL_LOCK_WAIT_TIMEOUT=10000
+L_LOCK_WAIT_TIMEOUT_ENABLE=y
+L_LOCK_WAIT_TIMEOUT=10000
