Retention Policy Enable 추가
Retention Policy Enable 추가

--- a/backup/opensql.config
+++ b/backup/opensql.config
@@ -112,6 +112,7 @@ P_BAK_ASYNC=N
 # If Backup is completed then, Remove old backups
 # P_BAK_RETENTION_MINIMUM_COUNT 
 # Leaving backups only this count
+P_BAK_RETENTION_POLICY_ENABLE=Y
 P_BAK_RETENTION_MINIMUM_COUNT=3
 
 # Archive Policy
